# wescam

./: .env  .gitignore  .gitignore_global  Cargo.toml  Dockerfile  README.md  create_msg-sink.txt  docker-compose.yml  jest.config.ts  ormconfig.json  package.json  tsconfig.json
julia/: Cargo.toml  Dockerfile
julia/src/: main.rs
julia/src/api/: api_errors.rs  bond_routes.rs  entity_routes.rs  mod.rs
julia/src/api/handlers/: bond_handler.rs  entity_handler.rs  mod.rs
julia/src/api/routes/: bond_route.rs  entity_route.rs  mod.rs
julia/src/chat/: forwarder.rs  gateway.rs  gateway_utility.rs  mod.rs  route.rs
julia/src/datatype/: bond_type.rs  entity_type.rs  mod.rs
julia/src/db/: mod.rs
julia/src/db/config/: db_config.rs  mod.rs  prepare_bond_query.rs  prepare_entity_query.rs  route_config.rs  table_config.rs
julia/src/db/configs/: mod.rs  prepare_bond_queries.rs  prepare_bond_query.rs  prepare_entity_query.rs  scylla_config.rs  table_config.rs
julia/src/db/datatype/: mod.rs
julia/src/db/interactions/: bond.rs  entity.rs  mod.rs
julia/src/db/service/: bond.rs  entity.rs  mod.rs  service_errors.rs
julia/src/pulsar_service/: mod.rs  msg_consumer.rs  msg_producer.rs  pulsar_consumer.rs  pulsar_producer.rs
julia/src/routes/: bond_routes.rs  entity_routes.rs
julia/src/scylladb/: mod.rs
julia/src/scylladb/configs/: message_sink_config.yml  scylla_config.rs  table_config.rs
julia/src/scylladb/datatype/: bond_type.rs  entity_type.rs  message_type.rs  mod.rs
julia/src/scylladb/service/: bond.rs  entity.rs  mod.rs  service_errors.rs  (+1 more)
server/: .env  (+1 more)
(+221 files in other folders)
