[package]
name = "julia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
scylla = "0.3.0" 
warp = "0.3"  # Web framework
serde = { version = "1.0", features = ["derive"] } 
chrono = { version = "0.4", features = ["serde"] }
snowflake = { version = "1.2", features = ["serde_support"] }
anyhow = { version = "1.0.75", features = [] }
serde_json = "1.0.106"
once_cell = "1.18.0"