[package]
name = "julia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
scylla = "0.9.0"
warp = "0.3"  # Web framework
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
snowflake = { version = "1.2", features = ["serde_support"] }
anyhow = { version = "1.0.75", features = [] }
serde_json = "1.0.106"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.73"
thiserror = "1.0.48"
pulsar = "6.0.1"
env_logger = "0.9"
log = "0.4.6"
futures = "0.3"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4", # Lets you generate random UUIDs
    "serde",
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
